<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/transparent"
    tools:context=".presentation.screen.ActivityLevelScreen">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_activity_level"
        android:textSize="20sp"
        android:textAppearance="@style/CustomTextStyle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/passiveActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/LayoutMaterialCardView"
        android:backgroundTint="@android:color/transparent"
        android:clickable="true"
        android:focusable="true"
        android:checkable="true"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/CustomTextStyle"
                android:textSize="15sp"
                android:text="@string/passive_activity"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/CustomTextStyle"
                android:textSize="15sp"
                android:text="@string/passive_description"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/inactiveActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/LayoutMaterialCardView"
        android:backgroundTint="@android:color/transparent"
        android:clickable="true"
        android:focusable="true"
        android:checkable="true"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passiveActivity"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/CustomTextStyle"
                android:textSize="15sp"
                android:text="@string/inactive_activity"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/CustomTextStyle"
                android:textSize="16sp"
                android:text="@string/inactive_activity_description"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/activeActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/LayoutMaterialCardView"
        android:backgroundTint="@android:color/transparent"
        android:clickable="true"
        android:focusable="true"
        android:checkable="true"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inactiveActivity"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/CustomTextStyle"
                android:textSize="15sp"
                android:text="@string/active_activity"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/CustomTextStyle"
                android:textSize="16sp"
                android:text="@string/active_activity_description"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/heavilyActiveActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/LayoutMaterialCardView"
        android:backgroundTint="@android:color/transparent"
        android:clickable="true"
        android:focusable="true"
        android:checkable="true"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activeActivity"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/heavily_activity"
                android:textAppearance="@style/CustomTextStyle"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/CustomTextStyle"
                android:textSize="16sp"
                android:text="@string/heavily_activity_description"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/extraActiveActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/LayoutMaterialCardView"
        android:backgroundTint="@android:color/transparent"
        android:clickable="true"
        android:focusable="true"
        android:checkable="true"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/heavilyActiveActivity"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/CustomTextStyle"
                android:textSize="15sp"
                android:text="@string/extra_active"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/CustomTextStyle"
                android:textSize="16sp"
                android:text="@string/extra_active_description"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonNextFragment"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="8dp"
        android:text="@string/next"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:enabled="false"
        android:theme="@style/Theme.MaterialComponents"
        android:textAppearance="@style/CustomTextStyle"
        android:textColor="@color/white"
        android:backgroundTint="@color/light_green"
        app:cornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>