<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/transparent"
    tools:context=".presentation.screen.BirthDateScreen">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_birthdate"
        android:textSize="20sp"
        android:textAppearance="@style/CustomTextStyle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textLayoutDay"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        app:endIconMode="none"
        app:boxBackgroundColor="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle"
        app:layout_constraintBottom_toTopOf="@id/buttonNextFragment"
        app:layout_constraintVertical_bias="0.4">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteDay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/day"
            android:gravity="center"
            android:textSize="20sp"
            android:textAppearance="@style/CustomTextStyle"
            android:inputType="none"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textLayoutMonth"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        app:endIconMode="none"
        app:boxBackgroundColor="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonNextFragment"
        app:layout_constraintVertical_bias="0.4">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteMonth"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/month"
            android:textSize="20sp"
            android:gravity="center"
            android:textAppearance="@style/CustomTextStyle"
            android:inputType="none"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textLayoutYear"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        app:endIconMode="none"
        app:boxBackgroundColor="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle"
        app:layout_constraintBottom_toTopOf="@id/buttonNextFragment"
        app:layout_constraintVertical_bias="0.4">

        <AutoCompleteTextView
            android:id="@+id/autoCompleteYear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/year"
            android:gravity="center"
            android:textSize="20sp"
            android:textAppearance="@style/CustomTextStyle"
            android:inputType="none"/>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/errorDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/CustomTextStyle"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="gone"
        android:gravity="center"
        android:textSize="14sp"
        android:text="@string/error_date"
        app:layout_constraintTop_toBottomOf="@id/textLayoutMonth"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonNextFragment"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="8dp"
        android:text="@string/next"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:theme="@style/Theme.MaterialComponents"
        android:textAppearance="@style/CustomTextStyle"
        android:backgroundTint="@color/light_green"
        app:cornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>