<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.screen.ProfileInfoScreen">

    <TextView
        android:id="@+id/textGrowth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/growth"
        android:textSize="22sp"
        android:textAppearance="@style/CustomTextStyle"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonNextFragment"
        app:layout_constraintVertical_bias="0.35"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutGrowth"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginEnd="24dp"
        app:errorIconDrawable="@null"
        app:suffixText="@string/centimeters"
        app:suffixTextAppearance="@style/RegisterSuffixEditTextStyle"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        app:boxBackgroundColor="@android:color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonNextFragment"
        app:layout_constraintVertical_bias="0.35">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputGrowth"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:text="120"
            android:inputType="number"
            android:gravity="center"
            android:textSize="18sp"
            android:textAppearance="@style/CustomTextStyle" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textCurrentWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/current_weight"
        android:textAppearance="@style/CustomTextStyle"
        android:textSize="22sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonNextFragment"
        app:layout_constraintVertical_bias="0.5"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutCurrentWeight"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginEnd="24dp"
        app:errorIconDrawable="@null"
        app:suffixText="@string/kilogram"
        app:suffixTextAppearance="@style/RegisterSuffixEditTextStyle"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        app:boxBackgroundColor="@android:color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonNextFragment"
        app:layout_constraintVertical_bias="0.5">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputCurrentWeight"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:text="120"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:textSize="18sp"
            android:textAppearance="@style/CustomTextStyle" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textDesiredWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/desired_weight"
        android:textAppearance="@style/CustomTextStyle"
        android:textSize="22sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonNextFragment"
        app:layout_constraintVertical_bias="0.65"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutDesiredWeight"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginEnd="24dp"
        app:errorIconDrawable="@null"
        app:suffixText="@string/kilogram"
        app:suffixTextAppearance="@style/RegisterSuffixEditTextStyle"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
        app:boxBackgroundColor="@android:color/transparent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonNextFragment"
        app:layout_constraintVertical_bias="0.65">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputDesiredWeight"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:text="120"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:textSize="18sp"
            android:textAppearance="@style/CustomTextStyle" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonNextFragment"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="8dp"
        android:text="@string/next"
        android:textSize="16sp"
        android:textAllCaps="false"
        android:enabled="false"
        android:theme="@style/Theme.MaterialComponents"
        android:textAppearance="@style/CustomTextStyle"
        android:textColor="@color/white"
        android:backgroundTint="@color/light_green"
        app:cornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>